--- a/requirements.txt
+++ b/requirements.txt
@@ -9,15 +9,19 @@ Django==5.0
 django-ninja==1.1.0
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.1
+flake8==6.1.0
 frozenlist==1.4.1
 idna==3.6
+mccabe==0.7.0
 multidict==6.0.4
 mypy-extensions==1.0.0
 packaging==23.2
 pathspec==0.12.1
 platformdirs==4.1.0
+pycodestyle==2.11.1
 pydantic==2.5.2
 pydantic_core==2.14.5
+pyflakes==3.1.0
 PyJWT==2.8.0
 pytz==2023.3.post1
 sqlparse==0.4.4
