--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ attrs==23.1.0
 black==23.12.0
 click==8.1.7
 Django==5.0
+django-cors-headers==4.3.1
 django-ninja==1.1.0
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.1
