--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,16 @@
-aiohttp==3.9.1
+aiohttp==3.9.3
 aiosignal==1.3.1
 annotated-types==0.6.0
 asgiref==3.7.2
-attrs==23.1.0
-black==23.12.0
+attrs==23.2.0
+black==24.1.1
 click==8.1.7
-Django==5.0
+Django==5.0.1
 django-cors-headers==4.3.1
 django-ninja==1.1.0
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.1
-flake8==6.1.0
+flake8==7.0.0
 frozenlist==1.4.1
 idna==3.6
 mccabe==0.7.0
@@ -18,13 +18,13 @@ multidict==6.0.4
 mypy-extensions==1.0.0
 packaging==23.2
 pathspec==0.12.1
-platformdirs==4.1.0
+platformdirs==4.2.0
 pycodestyle==2.11.1
-pydantic==2.5.2
-pydantic_core==2.14.5
-pyflakes==3.1.0
+pydantic==2.6.0
+pydantic_core==2.16.1
+pyflakes==3.2.0
 PyJWT==2.8.0
-pytz==2023.3.post1
+pytz==2023.4
 sqlparse==0.4.4
 typing_extensions==4.9.0
 yarl==1.9.4
