--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ pydantic==2.6.0
 pydantic_core==2.16.1
 pyflakes==3.2.0
 PyJWT==2.8.0
+python-dotenv==1.0.1
 pytz==2023.4
 sqlparse==0.4.4
 typing_extensions==4.9.0
