--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,8 @@ mypy-extensions==1.0.0
 packaging==23.2
 pathspec==0.12.1
 platformdirs==4.2.0
+psycopg==3.1.18
+psycopg-binary==3.1.18
 pycodestyle==2.11.1
 pydantic==2.6.0
 pydantic_core==2.16.1
