--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.1
 flake8==7.0.0
 frozenlist==1.4.1
+gunicorn==21.2.0
 idna==3.6
 mccabe==0.7.0
 multidict==6.0.4
